// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Query/> render with optional/required props 1`] = `
<DocumentFragment>
  <div
    class="query--loading"
    data-cy="{{data-cy}}--query"
  >
    <div />
    <div />
  </div>
</DocumentFragment>
`;

exports[`<Query/> render with required/default props 1`] = `
<DocumentFragment>
  <div
    class="query--loading"
    data-cy="--query"
  >
    <div />
    <div />
  </div>
</DocumentFragment>
`;
